--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Globla */
+/* Global */
 :root {
     /* Color */
     --color-white: #ffffff;
@@ -32,4 +32,33 @@
 /* Universal tags */
 * {
     box-sizing: border-box;
+}
+
+/* Typography */
+h1 {
+    font-size: var(--font-large);
+    font-weight: var(--weight-bold);
+    color: var(--color-black);
+    margin: 16px 0; /* h1 태그는 마진이 자동적으로 위아래로 32씩 들어가서 조정해줌*/
+}
+
+h2 {
+    font-size: var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+    color: var(--color-black);
+    margin: 8px 0;
+}
+
+h3 {
+    font-size: var(--font-regular);
+    font-weight: var(--font-regular);
+    color: black;
+    margin: 8px 0;
+}
+
+p {
+    font-size: var(--font-regular);
+    font-weight: var(--font-regular);
+    color: black;
+    margin: 4px 0;
 }
