--- a/style.css
+++ b/style.css
@@ -27,11 +27,29 @@
     --weight-regular: 400;
 
     /* Size */
+    --size-border-radius: 4px;
 }
 
 /* Universal tags */
 * {
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    margin: 0; /* body에 마진이 자동적으로 8씩 들어가는 걸 없앰  */
+}
+
+a {
+    /* 기본적인 밑줄 제거 및 색상 변경 */
+    text-decoration: none;
+    color: var(--color-white);
+}
+
+ul {
+    /* 앞에 점이랑 기본적인 패딩 제거 */
+    list-style: none;
+    padding-left: 0;
 }
 
 /* Typography */
@@ -61,4 +79,38 @@ p {
     font-weight: var(--font-regular);
     color: black;
     margin: 4px 0;
+}
+
+/* Navbar */
+#navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--color-pink);
+    align-items: center;
+    color: var(--color-white);
+    padding: 16px;
+}
+
+.navbar__menu {
+    display: flex;
+}
+
+.navbar__logo {
+    font-size: var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+}
+
+.navbar__menu__item {
+    padding: 8px 12px;
+    margin: 0 4px;
+    cursor: pointer;
+    border-radius: var(--size-border-radius);
+}
+
+.navbar__menu__item.active {
+    border: 1px solid var(--color-white);
+}
+
+.navbar__menu__item:hover {
+    background-color: var(--color-dark-pink);
 }
