--- a/style.css
+++ b/style.css
@@ -52,6 +52,17 @@ ul {
     padding-left: 0;
 }
 
+li {
+    list-style: none;
+}
+
+button {
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
 /* Typography */
 h1 {
     font-size: var(--font-large);
@@ -92,7 +103,7 @@ p {
 }
 
 .navbar__menu {
-    display: flex;
+    display: flex; /* 메뉴들을 수평으로 정렬 */
 }
 
 .navbar__logo {
@@ -104,7 +115,7 @@ p {
     padding: 8px 12px;
     margin: 0 4px;
     cursor: pointer;
-    border-radius: var(--size-border-radius);
+    border-radius: var(--size-border-radius); /* item.active와 item:hover에 반복해서 작성할 필요는 없겠죠? */
 }
 
 .navbar__menu__item.active {
@@ -113,4 +124,33 @@ p {
 
 .navbar__menu__item:hover {
     background-color: var(--color-dark-pink);
+}
+
+/* Home */
+#home {
+    background: center/cover no-repeat url('images/home-background.png');
+    padding: 40px;
+    text-align: center;
+}
+
+.home__avatar {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    border: 2px solid var(--color-light-white);
+}
+
+.home__title,
+.home__description {
+    color: var(--color-white);
+}
+
+.home__contact {
+    color: var(--color-white);
+    font-size: var(--font-regular);
+    font-weight: var(--weight-bold);
+    margin: 24px;
+    padding: 8px 12px;
+    border: 2px solid var(--color-white);
+    border-radius: var(--size-border-radius);
 }
