--- a/style.css
+++ b/style.css
@@ -486,6 +486,27 @@ p {
     color: var(--color-yellow);
 }
 
+/* Scroll */
+.arrow-up {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 70px;
+    height: 70px;
+    font-size: 50px;
+    color: var(--color-white);
+    background-color: var(--color-pink);
+    border-radius: 50%;
+    pointer-events: none; /* 버튼이 보이지 않아도 클릭이 허용되는 문제 해결 */
+    opacity: 0;
+    transition: opacity var(--animaition-duration) ease-in;
+}
+
+.arrow-up.visible {
+    opacity: 1;
+    pointer-events: auto;
+}
+
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
     .navbar__toggle-btn {
