--- a/style.css
+++ b/style.css
@@ -409,7 +409,7 @@ p {
 }
 
 .project__description h3 {
-    color: var(--color-white);
+    color: var(--color-orange);
 }
 
 .project__description h3::after {
@@ -417,9 +417,10 @@ p {
     display: block;
     position: relative;
     left: 50%;
-    width: 25px;
+    width: 50px;
     height: 2px;
-    margin-left: -12px; /* width값의 반 정도 */
+    /* margin-left: -12px; width값의 반 정도 */
+    transform: translateX(-50%); /* margint-left보다 괜찮아 보임 */
     margin-top: 8px;
     background-color: var(--color-dark-white);
 }
@@ -525,6 +526,11 @@ p {
     #navbar {
         flex-direction: column;
         align-items: flex-start;
+        background-color: var(--color-pink);
+    }
+
+    #navbar.navbar--dark {
+        padding: 16px;
     }
 
     .navbar__menu {
@@ -532,6 +538,11 @@ p {
         text-align: center;
         width: 100%; /* 너비가 좁아서 왼쪽으로 쏠림 */
         display: none;
+        transition: display var(--animaition-duration) ease-in;
+    }
+
+    .navbar__menu.open {
+        display: block;
     }
 
     .about__majors {
