--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ p {
     border-radius: var(--size-border-radius); /* item.active와 item:hover에 반복해서 작성할 필요는 없겠죠? */
 }
 
+.navbar__menu__item.active {
+    border: 1px solid var(--color-white);
+}
+
 .navbar__menu__item:hover {
     border: 1px solid var(--color-white);
     background-color: var(--color-dark-pink);
